# serializer version: 1
# name: test_split_json_dict_into_documents[large]
  list([
    Document(metadata={}, page_content='{"items": {"0": {"id": 1, "name": "item 1 name", "text": "item 1 content", "author": "item 1 author"}, "1": {"id": 2, "name": "item 2 name", "text": "item 2 content", "author": "item 2 author"}}}'),
    Document(metadata={}, page_content='{"items": {"2": {"id": 3, "name": "item 3 name", "text": "item 3 content", "author": "item 3 author"}, "3": {"id": 4, "name": "item 4 name", "text": "item 4 content", "author": "item 4 author"}}}'),
    Document(metadata={}, page_content='{"items": {"4": {"id": 5, "name": "item 5 name", "text": "item 5 content", "author": "item 5 author"}, "5": {"id": 6, "name": "item 6 name", "text": "item 6 content", "author": "item 6 author"}}}'),
    Document(metadata={}, page_content='{"items": {"6": {"id": 7, "name": "item 7 name", "text": "item 7 content", "author": "item 7 author"}, "7": {"id": 8, "name": "item 8 name", "text": "item 8 content", "author": "item 8 author"}}}'),
    Document(metadata={}, page_content='{"items": {"8": {"id": 9, "name": "item 9 name", "text": "item 9 content", "author": "item 9 author"}, "9": {"id": 10, "name": "item 10 name", "text": "item 10 content", "author": "item 10 author"}}}'),
    Document(metadata={}, page_content='{"items": {"10": {"id": 11, "name": "item 11 name", "text": "item 11 content", "author": "item 11 author"}}}'),
    Document(metadata={}, page_content='{"items": {"11": {"id": 12, "name": "item 12 name", "text": "item 12 content", "author": "item 12 author"}}}'),
    Document(metadata={}, page_content='{"items": {"12": {"id": 13, "name": "item 13 name", "text": "item 13 content", "author": "item 13 author"}}}'),
    Document(metadata={}, page_content='{"items": {"13": {"id": 14, "name": "item 14 name", "text": "item 14 content", "author": "item 14 author"}}}'),
    Document(metadata={}, page_content='{"items": {"14": {"id": 15, "name": "item 15 name", "text": "item 15 content", "author": "item 15 author"}}}'),
    Document(metadata={}, page_content='{"items": {"15": {"id": 16, "name": "item 16 name", "text": "item 16 content", "author": "item 16 author"}}}'),
    Document(metadata={}, page_content='{"items": {"16": {"id": 17, "name": "item 17 name", "text": "item 17 content", "author": "item 17 author"}}}'),
    Document(metadata={}, page_content='{"items": {"17": {"id": 18, "name": "item 18 name", "text": "item 18 content", "author": "item 18 author"}}}'),
    Document(metadata={}, page_content='{"items": {"18": {"id": 19, "name": "item 19 name", "text": "item 19 content", "author": "item 19 author"}}}'),
    Document(metadata={}, page_content='{"items": {"19": {"id": 20, "name": "item 20 name", "text": "item 20 content", "author": "item 20 author"}}}'),
    Document(metadata={}, page_content='{"items": {"20": {"id": 21, "name": "item 21 name", "text": "item 21 content", "author": "item 21 author"}}}'),
    Document(metadata={}, page_content='{"items": {"21": {"id": 22, "name": "item 22 name", "text": "item 22 content", "author": "item 22 author"}}}'),
    Document(metadata={}, page_content='{"items": {"22": {"id": 23, "name": "item 23 name", "text": "item 23 content", "author": "item 23 author"}}}'),
    Document(metadata={}, page_content='{"items": {"23": {"id": 24, "name": "item 24 name", "text": "item 24 content", "author": "item 24 author"}}}'),
    Document(metadata={}, page_content='{"items": {"24": {"id": 25, "name": "item 25 name", "text": "item 25 content", "author": "item 25 author"}}}'),
    Document(metadata={}, page_content='{"items": {"25": {"id": 26, "name": "item 26 name", "text": "item 26 content", "author": "item 26 author"}}}'),
    Document(metadata={}, page_content='{"items": {"26": {"id": 27, "name": "item 27 name", "text": "item 27 content", "author": "item 27 author"}}}'),
    Document(metadata={}, page_content='{"items": {"27": {"id": 28, "name": "item 28 name", "text": "item 28 content", "author": "item 28 author"}}}'),
    Document(metadata={}, page_content='{"items": {"28": {"id": 29, "name": "item 29 name", "text": "item 29 content", "author": "item 29 author"}}}'),
    Document(metadata={}, page_content='{"items": {"29": {"id": 30, "name": "item 30 name", "text": "item 30 content", "author": "item 30 author"}}}'),
    Document(metadata={}, page_content='{"items": {"30": {"id": 31, "name": "item 31 name", "text": "item 31 content", "author": "item 31 author"}}}'),
    Document(metadata={}, page_content='{"items": {"31": {"id": 32, "name": "item 32 name", "text": "item 32 content", "author": "item 32 author"}}}'),
    Document(metadata={}, page_content='{"items": {"32": {"id": 33, "name": "item 33 name", "text": "item 33 content", "author": "item 33 author"}}}'),
    Document(metadata={}, page_content='{"items": {"33": {"id": 34, "name": "item 34 name", "text": "item 34 content", "author": "item 34 author"}}}'),
    Document(metadata={}, page_content='{"items": {"34": {"id": 35, "name": "item 35 name", "text": "item 35 content", "author": "item 35 author"}}}'),
    Document(metadata={}, page_content='{"items": {"35": {"id": 36, "name": "item 36 name", "text": "item 36 content", "author": "item 36 author"}}}'),
    Document(metadata={}, page_content='{"items": {"36": {"id": 37, "name": "item 37 name", "text": "item 37 content", "author": "item 37 author"}}}'),
    Document(metadata={}, page_content='{"items": {"37": {"id": 38, "name": "item 38 name", "text": "item 38 content", "author": "item 38 author"}}}'),
    Document(metadata={}, page_content='{"items": {"38": {"id": 39, "name": "item 39 name", "text": "item 39 content", "author": "item 39 author"}}}'),
    Document(metadata={}, page_content='{"items": {"39": {"id": 40, "name": "item 40 name", "text": "item 40 content", "author": "item 40 author"}}}'),
    Document(metadata={}, page_content='{"items": {"40": {"id": 41, "name": "item 41 name", "text": "item 41 content", "author": "item 41 author"}}}'),
    Document(metadata={}, page_content='{"items": {"41": {"id": 42, "name": "item 42 name", "text": "item 42 content", "author": "item 42 author"}}}'),
    Document(metadata={}, page_content='{"items": {"42": {"id": 43, "name": "item 43 name", "text": "item 43 content", "author": "item 43 author"}}}'),
    Document(metadata={}, page_content='{"items": {"43": {"id": 44, "name": "item 44 name", "text": "item 44 content", "author": "item 44 author"}}}'),
    Document(metadata={}, page_content='{"items": {"44": {"id": 45, "name": "item 45 name", "text": "item 45 content", "author": "item 45 author"}}}'),
    Document(metadata={}, page_content='{"items": {"45": {"id": 46, "name": "item 46 name", "text": "item 46 content", "author": "item 46 author"}}}'),
    Document(metadata={}, page_content='{"items": {"46": {"id": 47, "name": "item 47 name", "text": "item 47 content", "author": "item 47 author"}}}'),
    Document(metadata={}, page_content='{"items": {"47": {"id": 48, "name": "item 48 name", "text": "item 48 content", "author": "item 48 author"}}}'),
    Document(metadata={}, page_content='{"items": {"48": {"id": 49, "name": "item 49 name", "text": "item 49 content", "author": "item 49 author"}}}'),
    Document(metadata={}, page_content='{"items": {"49": {"id": 50, "name": "item 50 name", "text": "item 50 content", "author": "item 50 author"}}}'),
  ])
# ---
# name: test_split_json_dict_into_documents[small]
  list([
    Document(metadata={}, page_content='{"items": {"0": {"id": 1, "name": "item 1 name", "text": "item 1 content", "author": "item 1 author"}, "1": {"id": 2, "name": "item 2 name", "text": "item 2 content", "author": "item 2 author"}}}'),
  ])
# ---
# name: test_split_json_list_into_documents[large]
  list([
    Document(metadata={}, page_content='{"id": 1, "name": "item 1 name", "text": "item 1 content", "author": "item 1 author"}'),
    Document(metadata={}, page_content='{"id": 2, "name": "item 2 name", "text": "item 2 content", "author": "item 2 author"}'),
    Document(metadata={}, page_content='{"id": 3, "name": "item 3 name", "text": "item 3 content", "author": "item 3 author"}'),
    Document(metadata={}, page_content='{"id": 4, "name": "item 4 name", "text": "item 4 content", "author": "item 4 author"}'),
    Document(metadata={}, page_content='{"id": 5, "name": "item 5 name", "text": "item 5 content", "author": "item 5 author"}'),
    Document(metadata={}, page_content='{"id": 6, "name": "item 6 name", "text": "item 6 content", "author": "item 6 author"}'),
    Document(metadata={}, page_content='{"id": 7, "name": "item 7 name", "text": "item 7 content", "author": "item 7 author"}'),
    Document(metadata={}, page_content='{"id": 8, "name": "item 8 name", "text": "item 8 content", "author": "item 8 author"}'),
    Document(metadata={}, page_content='{"id": 9, "name": "item 9 name", "text": "item 9 content", "author": "item 9 author"}'),
    Document(metadata={}, page_content='{"id": 10, "name": "item 10 name", "text": "item 10 content", "author": "item 10 author"}'),
    Document(metadata={}, page_content='{"id": 11, "name": "item 11 name", "text": "item 11 content", "author": "item 11 author"}'),
    Document(metadata={}, page_content='{"id": 12, "name": "item 12 name", "text": "item 12 content", "author": "item 12 author"}'),
    Document(metadata={}, page_content='{"id": 13, "name": "item 13 name", "text": "item 13 content", "author": "item 13 author"}'),
    Document(metadata={}, page_content='{"id": 14, "name": "item 14 name", "text": "item 14 content", "author": "item 14 author"}'),
    Document(metadata={}, page_content='{"id": 15, "name": "item 15 name", "text": "item 15 content", "author": "item 15 author"}'),
    Document(metadata={}, page_content='{"id": 16, "name": "item 16 name", "text": "item 16 content", "author": "item 16 author"}'),
    Document(metadata={}, page_content='{"id": 17, "name": "item 17 name", "text": "item 17 content", "author": "item 17 author"}'),
    Document(metadata={}, page_content='{"id": 18, "name": "item 18 name", "text": "item 18 content", "author": "item 18 author"}'),
    Document(metadata={}, page_content='{"id": 19, "name": "item 19 name", "text": "item 19 content", "author": "item 19 author"}'),
    Document(metadata={}, page_content='{"id": 20, "name": "item 20 name", "text": "item 20 content", "author": "item 20 author"}'),
    Document(metadata={}, page_content='{"id": 21, "name": "item 21 name", "text": "item 21 content", "author": "item 21 author"}'),
    Document(metadata={}, page_content='{"id": 22, "name": "item 22 name", "text": "item 22 content", "author": "item 22 author"}'),
    Document(metadata={}, page_content='{"id": 23, "name": "item 23 name", "text": "item 23 content", "author": "item 23 author"}'),
    Document(metadata={}, page_content='{"id": 24, "name": "item 24 name", "text": "item 24 content", "author": "item 24 author"}'),
    Document(metadata={}, page_content='{"id": 25, "name": "item 25 name", "text": "item 25 content", "author": "item 25 author"}'),
    Document(metadata={}, page_content='{"id": 26, "name": "item 26 name", "text": "item 26 content", "author": "item 26 author"}'),
    Document(metadata={}, page_content='{"id": 27, "name": "item 27 name", "text": "item 27 content", "author": "item 27 author"}'),
    Document(metadata={}, page_content='{"id": 28, "name": "item 28 name", "text": "item 28 content", "author": "item 28 author"}'),
    Document(metadata={}, page_content='{"id": 29, "name": "item 29 name", "text": "item 29 content", "author": "item 29 author"}'),
    Document(metadata={}, page_content='{"id": 30, "name": "item 30 name", "text": "item 30 content", "author": "item 30 author"}'),
    Document(metadata={}, page_content='{"id": 31, "name": "item 31 name", "text": "item 31 content", "author": "item 31 author"}'),
    Document(metadata={}, page_content='{"id": 32, "name": "item 32 name", "text": "item 32 content", "author": "item 32 author"}'),
    Document(metadata={}, page_content='{"id": 33, "name": "item 33 name", "text": "item 33 content", "author": "item 33 author"}'),
    Document(metadata={}, page_content='{"id": 34, "name": "item 34 name", "text": "item 34 content", "author": "item 34 author"}'),
    Document(metadata={}, page_content='{"id": 35, "name": "item 35 name", "text": "item 35 content", "author": "item 35 author"}'),
    Document(metadata={}, page_content='{"id": 36, "name": "item 36 name", "text": "item 36 content", "author": "item 36 author"}'),
    Document(metadata={}, page_content='{"id": 37, "name": "item 37 name", "text": "item 37 content", "author": "item 37 author"}'),
    Document(metadata={}, page_content='{"id": 38, "name": "item 38 name", "text": "item 38 content", "author": "item 38 author"}'),
    Document(metadata={}, page_content='{"id": 39, "name": "item 39 name", "text": "item 39 content", "author": "item 39 author"}'),
    Document(metadata={}, page_content='{"id": 40, "name": "item 40 name", "text": "item 40 content", "author": "item 40 author"}'),
    Document(metadata={}, page_content='{"id": 41, "name": "item 41 name", "text": "item 41 content", "author": "item 41 author"}'),
    Document(metadata={}, page_content='{"id": 42, "name": "item 42 name", "text": "item 42 content", "author": "item 42 author"}'),
    Document(metadata={}, page_content='{"id": 43, "name": "item 43 name", "text": "item 43 content", "author": "item 43 author"}'),
    Document(metadata={}, page_content='{"id": 44, "name": "item 44 name", "text": "item 44 content", "author": "item 44 author"}'),
    Document(metadata={}, page_content='{"id": 45, "name": "item 45 name", "text": "item 45 content", "author": "item 45 author"}'),
    Document(metadata={}, page_content='{"id": 46, "name": "item 46 name", "text": "item 46 content", "author": "item 46 author"}'),
    Document(metadata={}, page_content='{"id": 47, "name": "item 47 name", "text": "item 47 content", "author": "item 47 author"}'),
    Document(metadata={}, page_content='{"id": 48, "name": "item 48 name", "text": "item 48 content", "author": "item 48 author"}'),
    Document(metadata={}, page_content='{"id": 49, "name": "item 49 name", "text": "item 49 content", "author": "item 49 author"}'),
    Document(metadata={}, page_content='{"id": 50, "name": "item 50 name", "text": "item 50 content", "author": "item 50 author"}'),
  ])
# ---
# name: test_split_json_list_into_documents[small]
  list([
    Document(metadata={}, page_content='{"id": 1, "name": "item 1 name", "text": "item 1 content", "author": "item 1 author"}'),
    Document(metadata={}, page_content='{"id": 2, "name": "item 2 name", "text": "item 2 content", "author": "item 2 author"}'),
  ])
# ---
